# SFMLBird

./: CMakeLists.txt
include/: AnimatedSprite.h  Background.h  Bird.h  CMakeLists.txt  Game.h  MainHeader.h  ResourcePath.h  Wall.h
src/: AnimatedSprite.cpp  Background.cpp  Bird.cpp  CMakeLists.txt  Main.cpp  Wall.cpp
